crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_dalaran.blueprint.archetypes.ForceCollisionRadius.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
enabled: [false]
strength: [1.0]
iterations: [0]
