crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_dalaran.blueprint.archetypes.PlotLegend.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
corner: [3]
visible: [true]
