crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_dalaran.blueprint.archetypes.SpatialInformation.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
target_frame: []
show_bounding_box: [false]
show_axes: [false]
axes: [[3, 2, 5]]
