crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_dalaran.blueprint.archetypes.TensorSliceSelection.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
width: [{dimension: 0, invert: false}]
height: [{dimension: 0, invert: false}]
indices: [{dimension: 0, index: 0}]
slider: [{dimension: 0}]
